tests/paczka1/fuzzy1/53709633.err
Error in line 8: A844 S42L 305,3
Error in line 9: fj5 S427 97,3
Error in line 6: VfTfgJXxSe9 A287 84,2
Error in line 13: VfTfgJXxSe9 S427 51,7
Error in line 4: A844 S427 63,2
Error in line 24: GzF5 A287 41,2
Error in line 15: Ftt S284 6,2
